--- a/Jama/src/main/webapp/resources/sections/agreementWizLastStep.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizLastStep.xhtml
@@ -1,22 +1,30 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui">
 
+	<h:outputStylesheet library="css" name="home.css" />
+
 	<p:tab id="tabEnd" title="#{msgs.end__tab}">
 
-		<h:outputText value="#{msgs.agrCongr}" />
-		
-		<p:growl autoUpdate="true" />
+		<p:panel styleClass="semiEmptyPanel">
 
-		<br />
+			<h:outputText value="#{msgs.agrCongr}" />
 
-		<p:commandButton value="#{msgs.save}" action="#{agreementWizardPB.save()}" ajax="false" />
+			<p:growl autoUpdate="true" />
 
-		<br />
+			<br />
 
-		<p:commandButton styleClass="list-row-button" icon="ui-icon-mail-closed" action="#{mailSender.notifyClosure(contractManager.contract)}"
-			value="Test mail" />
+			<ui:remove>
+				<p:commandButton styleClass="list-row-button" icon="ui-icon-mail-closed" action="#{mailSender.notifyClosure(contractManager.contract)}"
+					value="Test mail" />
+			</ui:remove>
+		</p:panel>
+
+		<p:commandButton styleClass="saveButton" icon="ui-icon-disk" value="#{msgs.save}" action="#{agreementWizardPB.save()}" ajax="false" />
+
 
 	</p:tab>
+
+
 
 </ui:composition>
 
