--- a/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
@@ -8,42 +8,56 @@
 
 <composite:implementation>
 
+	<h:outputStylesheet library="css" name="table.css" />
+	<h:outputScript library="js" name="hideShow.js" />
 
-		<p:panel header="#{msgs.attachments_header}">
+
+	<p:panel header="#{msgs.attachments_header}" styleClass="semiEmptyPanel">
 
 		<p:growl id="messages" showDetail="true" />
 
 
-		<p:dataTable id="attchsList" value="#{attachmentsPB.attachments}" var="file" emptyMessage="#{msgs.noAttachmentFound}">
+		<p:dataTable id="attchsList" value="#{attachmentsPB.attachments}" var="file" emptyMessage="#{msgs.noAttachmentFound}"
+			styleClass="hideShow hide-column-names">
 			<p:column>
 				<p:commandLink id="downloadLink" ajax="false" value="#{file.fileName}, #{file.fileType}">
 					<p:fileDownload value="#{attachmentsPB.getFile(file)}" />
 				</p:commandLink>
 			</p:column>
+
 			<p:column>
-				<p:commandButton id="downloadButton" ajax="false" icon="ui-icon-arrowthick-1-s">
+				<p:commandButton id="downloadButton" styleClass="list-row-button" ajax="false" icon="ui-icon-arrowthick-1-s">
 					<p:fileDownload value="#{attachmentsPB.getFile(file)}" />
 				</p:commandButton>
+
 				<p:tooltip for="downloadButton" value="Download" showEffect="fade" hideEffect="fade" />
-				<p:commandButton id="removeButton" ajax="true" oncomplete="w_confirmA.show();" icon="ui-icon-trash">
+
+
+				<p:commandButton id="removeButton" styleClass="list-row-button" ajax="true" oncomplete="w_confirmA.show();" icon="ui-icon-trash">
 					<f:setPropertyActionListener target="#{attachmentsPB.selectedAttachment}" value="#{file}">
 					</f:setPropertyActionListener>
 				</p:commandButton>
+
 				<p:tooltip for="removeButton" value="#{msgs.remove}" showEffect="fade" hideEffect="fade" />
 			</p:column>
-		</p:dataTable>
-		
 
-		<p:fileUpload id="fileUpload" label="#{msgs.add_attachments}" auto="true" fileUploadListener="#{attachmentsPB.handleFileUpload}" multiple="true" showButtons="false" dragDropSupport="true"
-			update="messages attchsList" sizeLimit="1000000" cancelLabel="#{msgs.remove}" uploadLabel="#{msgs.load}" 
-			invalidSizeMessage="#{msgs.invalidFileSize}" invalidFileMessage="#{msgs.invalidFile}" rendered="#{cc.attrs.editingDisable == false}" />
+		</p:dataTable>
+
+		<br />
+
+
+		<p:fileUpload id="fileUpload" label="#{msgs.add_attachments}" auto="true" fileUploadListener="#{attachmentsPB.handleFileUpload}" multiple="true"
+			showButtons="false" dragDropSupport="true" update="messages attchsList" sizeLimit="10000000" cancelLabel="#{msgs.remove}" uploadLabel="#{msgs.load}"
+			invalidSizeMessage="#{msgs.invalidFileSize}" invalidFileMessage="#{msgs.invalidFile}" rendered="#{cc.attrs.editingDisable == false}"
+			oncomplete="setHideShow();" />
 
 	</p:panel>
 
-		<p:confirmDialog message="#{msgs.sure}" header="#{msgs.cancel}" severity="alert" widgetVar="w_confirmA">
-			<p:commandButton value="#{msgs.yes}" action="#{attachmentsPB.removeFile()}" immediate="true" oncomplete="w_confirmA.hide()" update="attchsList" />
-			<p:commandButton value="#{msgs.no}" onclick="w_confirmA.hide();" type="button" />
-		</p:confirmDialog>
+	<p:confirmDialog message="#{msgs.sure}" header="#{msgs.cancel}" severity="alert" widgetVar="w_confirmA">
+		<p:commandButton value="#{msgs.yes}" action="#{attachmentsPB.removeFile()}" immediate="true" oncomplete="setHideShow(); w_confirmA.hide();"
+			update="attchsList" />
+		<p:commandButton value="#{msgs.no}" onclick="w_confirmA.hide();" type="button" />
+	</p:confirmDialog>
 
 
 </composite:implementation>
