--- a/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
@@ -11,6 +11,7 @@
 <composite:implementation xmlns:sections="http://java.sun.com/jsf/composite/sections">
 
 	<h:outputStylesheet name="table.css" library="css" />
+	<h:outputStylesheet name="home.css" library="css" />
 
 	<p:growl autoUpdate="true" />
 
