--- a/Jama/src/main/webapp/chiefContractList.xhtml
+++ b/Jama/src/main/webapp/chiefContractList.xhtml
@@ -3,6 +3,8 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui">
 
 <f:metadata>
+	<f:viewParam name="class" value="#{chiefContractListPCB.lazyModel.filterContractClass}"
+		valueChangeListener="#{chiefContractListPCB.lazyModel.filterOnReload}" />
 	<f:viewParam name="closedString" value="#{chiefContractListPCB.lazyModel.filterClosedContract}"
 		valueChangeListener="#{chiefContractListPCB.lazyModel.filterOnReload}" />
 	<f:viewParam name="company.id" value="#{chiefContractListPCB.lazyModel.filterCompanyId}"
@@ -37,7 +39,8 @@
 
 </h:head>
 
-<h:body onload="setChiefListFilters('#{chiefContractListPCB.lazyModel.filterCompanyId}', '#{chiefContractListPCB.lazyModel.filterClosedContract}');">
+<h:body
+	onload="setChiefListFilters('#{chiefContractListPCB.lazyModel.filterCompanyId}', '#{chiefContractListPCB.lazyModel.filterClosedContract}', '#{chiefContractListPCB.lazyModel.filterContractClass}');">
 
 	<h:form prependId="false">
 		<input type="hidden" name="cid" value='#{chiefContractListPCB.conversation.id}' />
@@ -53,6 +56,10 @@
 
 			<p:ajax event="filter" oncomplete="setHideShow();" />
 			<p:ajax event="page" oncomplete="setHideShow();" />
+
+			<p:column styleClass="contractTypeColumn" filterBy="#{contract.class}" filterOptions="#{utilPB.contractFilter}">
+				<h:outputText value="#{utilPB.getNameFromClass(contract.class)}" />
+			</p:column>
 
 			<p:column styleClass="closedFilterColumn" filterBy="#{contract.closedString}"
 				filterOptions="#{utilPB.getBooleanFilter(msgs.closedMP, msgs.openMP)}">
