--- a/Jama/src/main/webapp/chiefContractList.xhtml
+++ b/Jama/src/main/webapp/chiefContractList.xhtml
@@ -91,11 +91,12 @@
 					<h:outputText value="#{msgs.deadlineDate}" />
 					<br />
 					<h:form>
-						<div style="display: block; width: 90%; margin: auto;">
+						<div style="display: block; margin: auto;">
 							<p:calendar styleClass="calendarFilter" widgetVar="w_firstContractDate" showOn="both" showOtherMonths="true"
 								value="#{chiefContractListPCB.lazyModel.filterContractMinDate}" pattern="dd/MM/yyyy" readonlyInput="true">
 							</p:calendar>
-							-
+						</div>
+						<div style="display: block; margin: auto;">
 							<p:calendar styleClass="calendarFilter" widgetVar="w_lastContractDate" showOn="both" showOtherMonths="true"
 								value="#{chiefContractListPCB.lazyModel.filterContractMaxDate}" pattern="dd/MM/yyyy" readonlyInput="true">
 							</p:calendar>
@@ -118,11 +119,12 @@
 				<f:facet name="header">
 					<h:outputText value="#{msgs.nextDeadline}" />
 					<br />
-					<div style="display: block; width: 90%; margin: auto;">
+					<div style="display: block; margin: auto;">
 						<p:calendar styleClass="calendarFilter" widgetVar="w_firstInstDate" showOn="both" showOtherMonths="true"
 							value="#{chiefContractListPCB.lazyModel.filterInstMinDate}" pattern="dd/MM/yyyy" readonlyInput="true">
 						</p:calendar>
-						-
+					</div>
+					<div style="display: block; margin: auto;">
 						<p:calendar styleClass="calendarFilter" widgetVar="w_lastInstDate" showOn="both" showOtherMonths="true"
 							value="#{chiefContractListPCB.lazyModel.filterInstMaxDate}" pattern="dd/MM/yyyy" readonlyInput="true">
 						</p:calendar>
