--- a/Jama/src/main/webapp/login.xhtml
+++ b/Jama/src/main/webapp/login.xhtml
@@ -1,9 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui">
 
 
 <h:head>
@@ -22,19 +19,16 @@
 
 			<h:panelGrid columns="2" styleClass="centered">
 				<h:outputText value="#{msgs.serialNumber}: " />
-				<p:inputText id="serialNumber" binding="#{serialNumber}"
-					required="true" label="#{msgs.serialNumber}" />
+				<p:inputText id="serialNumber" binding="#{serialNumber}" required="true" label="#{msgs.serialNumber}" />
 				<h:outputText value="#{msgs.password}: " />
 				<p:password id="password" binding="#{password}" required="true" />
 			</h:panelGrid>
-			<p:commandButton value="Login"
-				action="#{userManager.login(serialNumber.value, password.value)}" />
+			<p:commandButton value="Login" action="#{userManager.login(serialNumber.value, password.value)}" />
 			<br />
 			<br />
 		</p:panel>
-		
-					<p:messages id="messages" showDetail="false" autoUpdate="true"
-				closable="true" />
+
+		<p:messages id="messages" showDetail="false" autoUpdate="true" closable="true" />
 	</h:form>
 
 
