--- a/Jama/src/main/webapp/resources/sections/agreementWizLastStep.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizLastStep.xhtml
@@ -5,7 +5,7 @@
 
 	<p:tab id="tabEnd" title="#{msgs.end__tab}">
 
-		<p:panel styleClass="semiEmptyPanel">
+		<p:panel id="agrLastStepPanel" styleClass="semiEmptyPanel">
 
 			<h:outputText value="#{msgs.agrCongr}" />
 
@@ -19,8 +19,9 @@
 			</ui:remove>
 		</p:panel>
 
-		<p:commandButton styleClass="saveButton" icon="ui-icon-disk" value="#{msgs.save}" action="#{agreementWizardPB.save()}" ajax="false" />
+		<p:commandButton id="agrSaveButton" styleClass="saveButton" icon="ui-icon-disk" value="#{msgs.save}" action="#{agreementWizardPB.save()}"/>
 
+		<p:blockUI block="agrSaveButton" trigger="agrSaveButton"/>
 
 	</p:tab>
 
